--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 body{
+    font-family: 'Bebas Neue', cursive;
     display: flex;
     flex-direction: column;
     margin: 0;
+    box-sizing: border-box;
 }
 header{
-    background: #1f2937;
+    background: #214a9a;
     display: flex;
     flex-direction: column;
     color: white;
@@ -37,7 +40,7 @@ header section{
     font-size: 2.2em;
 }
 .headerbutton{
-    background: #3882f6;
+    background:  	royalblue;
     border-radius: 5px;
     border: 0;
     padding: 5px 15px 5px 15px;
@@ -73,7 +76,7 @@ header section{
     text-align: center;
 }
 .containermid{
-    background: purple;
+    background: #214a9a;
     display: flex;
     justify-content: center;
     padding: 5% 15% 5% 15%;
@@ -81,7 +84,7 @@ header section{
 }
 .quote{
     font-size: 36px;
-    font-family: italic;
+    font-family: 'Bebas Neue', cursive;
     color: yellow;
     font-weight: 300;
 }
